Fixed spelling mistake.

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 			</ul>
 			<li class="fragment fade-up">Handler mode</li>
 			<ul>
-				<li class="fragment fade-up">Entered as a result of an execution, always in privileged</li>
+				<li class="fragment fade-up">Entered as a result of an exception, always in privileged</li>
 				<li class="fragment fade-up">Processor returns to Thread mode when it has finished exception handling</li>
 			</ul>
 		</ul>
