Fix lecture number

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!-- BEGIN SLIDES -->
 <section data-background-image="images/background.jpg" data-background-opacity="0.4">
-	<h1>Lecture 5</h1>
+	<h1>Lecture 4</h1>
 	<p>Paul Fiterau</p>
 	<br/>
 	<footer>Based on slides by Nikolaus Huber</footer>
@@ -192,7 +192,7 @@
 		</ul>
 		<li class="fragment fade-up">GPIO_OUT_CLR performs atomic bit-clear on GPIO_OUT</li>
 		<ul class="fragment fade-up">
-			<li>Effectively: GPIO_OUT = GPIO_OUT = GPIO_OUT & ~wdata</li>
+			<li>Effectively: GPIO_OUT = GPIO_OUT & ~wdata</li>
 		</ul>
 		<li class="fragment fade-up">Check RP2040 Datasheet (p. 46) for specifics</li>
 	</ul>
